# ocimage

./: .goreleaser.yaml  AGENTS.md  COMPATABILITY.md  Containerfile  Makefile  README.md  go.mod  go.sum  main.go
.github/workflows/: ci.yaml  release.yml
examples/: Makefile  README.md  templates.go
examples/csharp/: README.md
examples/csharp/aspnet-chiseled/: .gitignore  Containerfile  Makefile
examples/go/scratch-chi/: .gitignore  Makefile
examples/php/: README.md
examples/php/base/: Containerfile  Makefile
examples/php/laravel/: .dockerignore  .gitignore  Containerfile  Makefile
examples/python/: README.md
examples/python/base/: Containerfile  Makefile
examples/python/django/: .dockerignore  Containerfile  Makefile
examples/python/django/template/: pyproject.toml
examples/python/django/template/config/: settings.py  urls.py
examples/python/django/template/tasks/: views.py
examples/python/django/template/tasks/templates/tasks/: index.html
examples/ruby/: README.md
examples/ruby/base/: Containerfile  Gemfile  Makefile
examples/ruby/ruby-rails/: .gitignore  Containerfile  Makefile  setup.sh
examples/rust/: README.md
examples/rust/scratch/src/: Cargo.toml
examples/rust/scratch/src/src/: main.rs
internal/buildvars/: doc.go  vars.go
internal/cmd/: build.go  doc.go  helpers.go  init.go  push.go  root.go  save.go  tag.go  version.go
pkg/containerfile/: doc.go  parse.go  parse_test.go  types.go
pkg/initfile/: doc.go  initfile.go  initfile_test.go
pkg/store/: doc.go  store.go  store_test.go
scripts/git-hooks/: pre-commit
(+40 files in other folders)
